--- a/src/components/Storeinfo/style.css
+++ b/src/components/Storeinfo/style.css
@@ -29,6 +29,7 @@
   color: white;
 }
 .content_text .discription {
+  padding-top: 30px;
   font-size: 15px;
   margin-bottom: 0;
   line-height: 24px;
